application/k8_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-k8-app
spec:
  ports:
    - port: 6000
      targetPort: 6000
      name: http
  selector:
    app: simple-k8-app
